Fixing dark mode small bug

--- a/composer/packages/web-toolkit-bundle/assets/components/EditorJsField/editorjs-field.scss
+++ b/composer/packages/web-toolkit-bundle/assets/components/EditorJsField/editorjs-field.scss
@@ -74,6 +74,12 @@ body.ea-dark-scheme .mwt-editorjs-wrapper {
     }
   }
 
+  @media (min-width: 651px) {
+    .codex-editor--narrow .ce-toolbox {
+      background: none;
+    }
+  }
+
   .ce-toolbar {
     .ce-toolbar__settings-btn:hover,
     .ce-toolbar__plus:hover {
